fixing fonts and horizontal scroll

--- a/app/assets/stylesheets/base/_fonts.sass
+++ b/app/assets/stylesheets/base/_fonts.sass
@@ -2,16 +2,12 @@
 //  FONTS
 // ---------------------------------------------------------------------------------
 
-@font-face 
-    font-family: 'Nimbus sans condensed'
-    src: url('ufonts.com_nimbus-sans-l-regular-condensed.ttf') format('truetype')
-    font-weight: normal
-    font-style: normal
+
 
 
 
 // Google Fonts
-@import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700italic,700)
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,900italic,900,300italic,300,100italic,100)
 
 // Font Variables
 
