--- a/app/assets/stylesheets/layouts/_home.sass
+++ b/app/assets/stylesheets/layouts/_home.sass
@@ -1,6 +1,8 @@
 body 
 	text-decoration: none
-	
+	font-family: 'Roboto', sans-serif
+.section
+	width: 100%
 #brasilia-aberta
 	padding: 20px
 	background: url('fundo_bsb2.jpg')
@@ -61,7 +63,7 @@ body
 		font-size: 20px
 
 #partners
-	padding: 80px
+	padding: 80px 0px
 	.partner
 
 
@@ -96,7 +98,7 @@ body
 
 
 #events
-	padding: 40px
+	padding: 40px 0px
 	ul
 		list-style-type: none
 		padding: 0
